Add Postgres + Flink volumes, handle Flink shutdown/restore, SQRL config improvements (#1337)